added the caching of the restore state until the list frame gets reset removed the positioning of the dropdown at the bottom of reflow r kmcclusk b=21945,25059